<resources>
    <string name="app_name">Quad Squad Game</string>
    <string name="title">Learn how to sort like a computer scientist!</string>
    <string name="sort1">  Bubble Sort  </string>
    <string name="sort2">  Insertion Sort  </string>
    <string name="sort3">  Selection Sort  </string>
    <string name="choose">Choose a type of sort:</string>
    <string name="timeRemaining">"Time Remaining: "</string>
    <string name="hintsUsed">"Number of Hints used: "</string>
    <string name="tests">"Number of incorrect tests: "</string>
    <string name="wrongMoves">"Number of Wrong Moves: "</string>
    <string name="score">"Total Score: "</string>
    <string name="hs1">Highscore: </string>
    <string name="bubbleSortInstructions">Hello! Welcome to the Quad Squad Bubble Sort Game! To skip this tutorial, press the play button at the bottom of the page!\n\nBubble Sort is a technique used by computers to sort a list.\n\nThis sort always starts at the far left of the list and moves right through comparing two items at a time. \n\nIt starts with the first and second item, and if the first one is bigger than the second item, then it switches the two!\n\nIt then moves to the second and third item and if the second is bigger than the third item, it swaps them. \n\nIt will continue down the list, checking the two neighboring items until it gets to the end of the list. \n\nThen it will start back at the far left and repeat the process over again! \n\nAs you may find, this sorting method is somewhat slow and involves a lot of checks. \n\nLet\'s see how well you can Bubble Sort like a Computer!! Remember to click TEST once you have the list sorted! And make sure to always click the leftmost item first. \n\nClick the next button below to begin! </string>
    <string name="insertionSortInstructions">Hello! Welcome to the Quad Squad Insertion Sort Game! To skip this tutorial, press the play button at the bottom of the page!\n\nInsertion Sort is a technique used by computers to sort a list.\n\nThis sort starts at the far left of the list. If the item is smaller than the item on it\'s left, then you switch those two items. Then it compares to the next item to it\'s left until it is bigger than the item to its left, or its at the beginning of the list. \n\nYou may find that this still involves a lot of checks but is somewhat faster than Bubble Sort. \n\nLet\'s see how well you can do Insertion Sort like a computer! Remember to click TEST once you have the list sorted! And make sure to always click the leftmost item first. \n\n Click the PLAY button below to begin!</string>
    <string name="selectionSortInstructions">Hello! Welcome to the Quad Squad Selection Sort Game! To skip this tutorial, press the play button at the bottom of the page!\n\nSelection Sort is a technique used by computers to sort a list.\n\nFor this sorting method, click on first object in the list and then swap it with the smallest number in the list. Once the smallest number is in the first spot, do the same process and find the next smallest number to put in the second spot.\n\nThis process takes a computer a while to check every value, but you may find it easier since you can look at the entire list at once. \n\nLet\'s see how well you can do a Selection Sort like a computer! Remember to click TEST once you have the list sorted! And make sure to always click the leftmost item first. \n\nClick the PLAY button below to begin!</string>
    <string name="aboutMe">About Me</string>

</resources>
