<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="csc420.augustana.com.quadsquadgame.MyActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort1"
        android:id="@+id/button1"
        android:layout_marginEnd="35dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:text="@string/sort2"
        android:background="#000000"
        android:textColor="#ffffff"
        android:layout_below="@+id/button1"
        android:layout_alignEnd="@+id/button1"
        android:layout_marginTop="37dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:text="@string/sort3"
        android:background="#000000"
        android:textColor="#ffffff"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_marginTop="25dp"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:textSize="40sp"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/man"
        android:layout_marginEnd="124dp"
        android:layout_alignTop="@+id/button2"
        android:layout_alignEnd="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/bubble"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@+id/button1"
        android:layout_alignBottom="@+id/button2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:id="@+id/textView2"
        android:layout_marginStart="40dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_marginBottom="35dp"
        android:layout_alignParentStart="true" />

</RelativeLayout>
